[package]
name = "advent_rust"
version = "0.1.0"
authors = ["Dan Seminara <semi225599@gmail.com>"]
edition = "2018"

[lib]
name = "advent"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.18.0"
fancy-regex = "0.3.5"
im = "15.0.0"
itertools = "0.8.2"
json = "0.12.4"
lazy_static = "1.4.0"
mod_exp = "1.0.1"
ndarray = "0.13.1"
num-complex = "0.3.0"
rayon = "1.3.1"
regex = "1.3.9"
rust-crypto = "0.2.36"
syn = "1.0.38"

[build-dependencies]
walkdir = "2.3.1"
