[package]
name = "advent_rust"
version = "0.1.0"
authors = ["Dan Seminara <semi225599@gmail.com>"]
edition = "2018"

[lib]
name = "advent"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.2"
counter = "0.5.2"
gcd = "2.0.1"
hex = "0.4.3"
itertools = "0.10.1"
json = "0.12.4"
lazy_static = "1.4.0"
mod_exp = "1.0.1"
ndarray = "0.13.1"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
rayon = "1.3.1"
regex = "1.3.9"
reqwest = { version = "0.10.9", features = ["blocking"] }
rust-crypto = "0.2.36"
safe_arch = "0.6.0"
scan_fmt = "0.2.6"
syn = "1.0.38"
take-until = "0.1.0"

[build-dependencies]
walkdir = "2.3.1"
